<resources>
    <string name="app_name">Vremia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navig_drawer_open">Open Navigation Drawer</string>
    <string name="navig_drawer_close">Close Navigation Drawer</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="task_name">Task Name:</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="task_description">Task Description:</string>
    <string name="enter_description_here">Enter Description Here...</string>
    <string name="date">Date:</string>
    <string name="set_date">Set Date</string>
    <string name="time">Time:</string>
    <string name="set_time">Set Time</string>
    <string name="set_task_color">Set Task Color:</string>
    <string name="click_to_set_color">Click to Set Color</string>
    <string name="todo">TODO</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_name">Image name</string>
    <string name="save_task">Save Task</string>
</resources>