<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDFED">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_addtask" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="136dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageToUpload"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#E1AD01"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.514"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/TextforTaskNameEdit"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/task_name"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/taskNameInput"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:autofillHints=""
                    android:hint="@string/enter_task_name"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@android:color/holo_orange_dark"
                    tools:ignore="TextFields,TouchTargetSizeCheck" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:text="@string/task_description"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/descInput"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:autofillHints=""
                    android:gravity="top|start"
                    android:hint="@string/enter_description_here"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:minLines="5"
                    android:paddingStart="10dp"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@android:color/holo_orange_dark"
                    tools:ignore="RtlCompat,RtlSymmetry" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lineardatepicker"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/TextforDateSpinner"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/datepick"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/set_date"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@android:color/holo_orange_dark"
                    app:drawableEndCompat="@drawable/righticon" />

                <TextView
                    android:id="@+id/Timepicktext"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/timepick"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/set_time"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@android:color/holo_orange_dark"
                    app:drawableEndCompat="@drawable/righticon" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearcolorpicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textcolorpick"
                    android:layout_width="172dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/set_task_color"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/colorpick"
                    android:layout_width="143dp"
                    android:layout_height="40dp"
                    android:gravity="center|end"
                    android:text="@string/click_to_set_color"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@android:color/holo_orange_dark"
                    app:drawableEndCompat="@drawable/righticon"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/colorpreview"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="143dp">


            <Button
                android:id="@+id/bSaveTask"
                android:layout_width="154dp"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="#015293"
                android:text="@string/save_task"
                android:textColor="@android:color/holo_orange_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>